--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Codex - Your Chatbot AI</title>
+  <title>Codex - Your AI Chatbot</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
